Forward the java options needed for javafx to chunky